# PAS

./: .gitignore  CMakeLists.txt  README.md  Sementes_Taillard.txt
data/: Matriz_Adjacencia_2Andar.csv  Matriz_Adjacencia_3Andar.csv  Matriz_Adjacencia_4Andar.csv  Salas Oficiais.csv  agendamento_real.csv  grad_instancia.csv  mapeamento.csv
include/: Instancia.h  Solucao.h  Solver.h  Utils.h  parser.h
src/: Solver.cpp  Utils.cpp  main.cpp  parser.cpp
tools/: eval_real.cpp
